2009-08-28  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (cpu_arch): Use PROCESSOR_L1OM on "l1om".
	(i386_align_code): Handle PROCESSOR_L1OM.
	(check_cpu_arch_compatible): Fix a typo in comments.
	(set_cpu_arch): Check cpu_arch_isa instead of
	cpu_arch_isa_flags.bitfield.cpul1om.
	(i386_mach): Likewise.
	(i386_target_format): Likewise.

	* config/tc-i386.h (processor_type): Add PROCESSOR_L1OM.

2009-08-26  DJ Delorie  <dj@redhat.com>

	* config/tc-mep.c (md_pcrel_from_section): Handle any other
	forced-relocation cases.

2009-08-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (TARGET_CPU_CFILES): Add config/tc-moxie.c.
	* config/tc-moxie.c (md_assemble): Fix typos in strings.  Fix
	syntax error.
	* Makefile.in: Regenerate.
	* po/POTFILES.in: Likewise.
	* po/gas.pot: Likewise.

2009-08-26  Nick Clifton  <nickc@redhat.com>

	* config/obj-coff-seh.c (seh_arm_write_pdata): Test for
	seh_ctx_root being NULL.

2009-08-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (am__skiplex, am__skipyacc): New.
	* Makefile.in: Regenerate.

2009-08-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (YFLAGS): Remove, not needed any more.
	(AM_CPPFLAGS): Renamed from ...
	(INCLUDES): ... this.
	* Makefile.in: Regenerate.

	* Makefile.am (AUTOMAKE_OPTIONS): Remove 1.8 cygnus, add 1.11,
	foreign and no-dist.
	(all): Remove now-unneeded dependency upon info.
	(DIST_SUBDIRS, MKDEP, DEP_INCLUDES, DEP_FLAGS, CLEANFILES)
	(DEP_FILE_DEPS): Remove variables.
	(OBJ_FORMAT_CFILES): Add config/obj-multi.c.
	(OBJ_FORMAT_HFILES): Add config/obj-multi.h.
	($(OBJS), ecoff.o): Remove now-unneeded manual dependencies.
	($(TARG_CPU_O), $(ATOF_TARG_O), obj-aout.o, obj-coff.o obj-ecoff.o)
	(obj-elf.o obj-evax.o, obj-fdpicelf.o, obj-multi.o, obj-som.o)
	(e-mipself.o, e-mipsecoff.o, e-i386aout.o, e-i386coff.o, e-i386elf.o)
	(e-crisaout.o, e-criself.o, tc-i386.o, xtensa-relax.o): Remove
	now-unneeded rules.