@@ -1,4 +1,4 @@
-# Copyright (C) 1995, 1996, 1997, 2002, 2003, 2004, 2007
+# Copyright (C) 1995, 1996, 1997, 2002, 2003, 2004, 2007, 2009
 # Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
@@ -169,6 +169,8 @@ if [istarget sh*-*-*] then {
 	run_dump_test "reg-prefix"
 
 	run_dump_test "too_large"
+
+	run_dump_test "sign-extension"
     }
 }
 
