@@ -1,0 +1,3 @@
+	.align 2
+foo:
+	mov #0xfffffff0, r0
